<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.bechberger</groupId>
    <artifactId>hello-ebpf</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>hello-ebpf</name>
    <url>https://github.com/parttimenerd/hello-ebpf</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>parttimenerd</id>
            <name>Johannes Bechberger</name>
            <email>me@mostlynerdless.de</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:parttimenerd/hello-ebpf.git</connection>
        <developerConnection>scm:git:https://github.com/parttimenerd/hello-ebpf.git</developerConnection>
        <url>https://github.com/parttimenerd/hello-ebpf</url>
    </scm>

    <inceptionYear>2023</inceptionYear>
    <description>Java bindings for libbcc (eBPF) modelled after the Python bindings.</description>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jreleaser</groupId>
                    <artifactId>jreleaser-maven-plugin</artifactId>
                    <version>1.10.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>--enable-preview --enable-native-access=ALL-UNNAMED</argLine>
                    <forkedProcessExitTimeoutInSeconds>5</forkedProcessExitTimeoutInSeconds>
                    <forkCount>1</forkCount>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jreleaser</groupId>
                <artifactId>jreleaser-maven-plugin</artifactId>
                <inherited>false</inherited>
                <configuration>
                    <jreleaser>
                        <signing>
                            <active>ALWAYS</active>
                            <armored>true</armored>
                        </signing>
                        <upload>
                            <active>NEVER</active>
                        </upload>
                        <release>
                            <github>
                                <owner>parttimenerd</owner>
                                <overwrite>true</overwrite>
                                <skipRelease>true</skipRelease>
                                <draft>true</draft>
                            </github>
                        </release>
                        <deploy>
                            <maven>
                                <nexus2>
                                    <maven-central>
                                        <active>ALWAYS</active>
                                        <url>https://s01.oss.sonatype.org/service/local</url>
                                        <snapshotUrl>https://s01.oss.sonatype.org/content/repositories/snapshots/</snapshotUrl>
                                        <closeRepository>true</closeRepository>
                                        <releaseRepository>true</releaseRepository>
                                        <stagingRepositories>
                                            <stagingRepository>${project.build.directory}/staging-deploy</stagingRepository>
                                        </stagingRepositories>
                                    </maven-central>
                                </nexus2>
                            </maven>
                        </deploy>
                    </jreleaser>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>publication</id>
            <properties>
                <altDeploymentRepository>local::default::file:${project.build.directory}/staging-deploy</altDeploymentRepository>
            </properties>
            <build>
                <defaultGoal>deploy</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <attach>true</attach>
                                    <additionalJOption>-Xdoclint:none</additionalJOption>
                                    <release>21</release>
                                    <additionalOptions>--enable-preview</additionalOptions>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <release>21</release>
                            <additionalOptions>--enable-preview</additionalOptions>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <attach>true</attach>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.test.skip>true</maven.test.skip>
    </properties>

   <modules>
        <module>annotations</module>
        <module>bcc</module>
   </modules>
</project>
